--- a/src/main/resources/assets/basic_mod/lang/en_us.json
+++ b/src/main/resources/assets/basic_mod/lang/en_us.json
@@ -1,4 +1,3 @@
 {
-  "item.basic_mod.copper_ingot": "Copper Ingot",
-  "block.basic_mod.cooper_ore": "Cooper Ore"
+  "item.basic_mod.copper_ingot": "Copper Ingot"
 }
