--- a/src/main/resources/assets/basic_mod/lang/en_us.json
+++ b/src/main/resources/assets/basic_mod/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.basic_mod.steel_ingot": "Steel Ingot"
+  "item.basic_mod.steel_ingot": "Steel Ingot",
+  "item.basic_mod.wire": "Wire"
 }
