--- a/src/main/resources/assets/basic_mod/lang/en_us.json
+++ b/src/main/resources/assets/basic_mod/lang/en_us.json
@@ -1,5 +1,3 @@
 {
-  "item.basic_mod.steel_ingot": "Steel Ingot",
-  "item.basic_mod.wire": "Wire",
-  "block.basic_mod.copper_ore": "Copper Ore"
+  "item.basic_mod.steel_ingot": "Steel Ingot"
 }
