Added STEEL COPPER NUGGETS
Added Recepies for : STEEEL COPPER NUGGETS

--- a/src/main/resources/assets/basic_mod/lang/en_us.json
+++ b/src/main/resources/assets/basic_mod/lang/en_us.json
@@ -1,3 +1,5 @@
 {
+  "item.basic_mod.copper_nugget": "Copper Nugget",
+  "item.basic_mod.copperingot": "Copper Ingot",
   "item.basic_mod.steel_ingot": "Steel Ingot"
 }
