--- a/src/main/resources/assets/basic_mod/lang/en_us.json
+++ b/src/main/resources/assets/basic_mod/lang/en_us.json
@@ -1,5 +1,7 @@
 {
+  "item.basic_mod.copper_nugget": "Copper Nugget",
+  "item.basic_mod.copperingot": "Copper Ingot",
+  "item.basic_mod.copperwire": "Copper Wire",
   "item.basic_mod.steel_ingot": "Steel Ingot",
-  "item.basic_mod.wire": "Wire",
   "block.basic_mod.copper_ore": "Copper Ore"
 }
